(library
 (public_name libssh)
 (modules common client server ssh)
  (foreign_stubs
  (language c)
  (names libssh_stubs)
  (flags (:include c_flags.sexp)))
 (c_library_flags (:include c_library_flags.sexp) -Wno-error))

(executable
 (name discover)
 (modules discover)
 (libraries dune-configurator))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (action  (run ./discover.exe)))